# 3d-ai-computervision-reconstruction

./: 3d_gaussian_function.cpp  CMakeLists.txt  README.md  covid_detection_by_reconstructing_2d_to_3d_image_using_depth_estimation.ipynb  covid_detection_by_reconstructing_2d_to_3d_image_using_depth_estimation의_사본.ipynb  data_read.cpp  function.hpp  main.cpp
